--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UFT-8">
+  <title>School Completion Rates 2019</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://d3js.org/d3.v5.js"></script>
+  <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+  <script src="https://d3js.org/d3-transition.v1.min.js"></script>
+  <script src="https://d3js.org/d3-drag.v1.min.js"></script>
+  <script src="https://d3js.org/d3-zoom.v1.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Cairo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cairo:600,700&display=swap" rel="stylesheet">
+</head>
+<body id="body">
+  <div class="wrapper">
+  <div class="doc-title">
+    <p> School Completion Rates 2019</p>
+    <div id="subtitle">
+      <p>Upper-secondary Education</p>
+      <p>Data: <a href="https://data.unicef.org/resources/dataset/education-data/">UNICEF</a></p>
+    </div>
+  </div>
+  <form class="options">
+    <div id="options-title">Filter results</div>
+    <div>
+      <label>
+        Total
+        <input  id="total" onclick='displayMap(this.value)' type="radio"  name="total" value="total" /> 
+      </label>
+    </div>
+    <br />
+    <div>
+      <div class="gender" id="options-title">Gender</div>
+      <label>
+        Female
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="female"/> 
+      </label>
+      <label> 
+        Male 
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="male"/> 
+      </label>
+    </div>
+    <br />
+    <div>
+      <div class="residence" id="options-title">Residence</div>
+      <label>
+        Rural
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="rural"/> 
+      </label>
+      <label>
+        Urban
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="urban"/>
+      </label>
+    </div>
+    <br/>
+    <div id="wealth">
+      <div id="options-title">Wealth Quintile</div>
+      <label>
+        Poorest
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="poorest"/> 
+      </label>
+      <label for="">
+        Second
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="second"/> 
+      </label>
+      <label for="">
+        Middle
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="middle"/> 
+      </label>
+      <label for="">
+        Fourth
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="fourth"/> 
+      </label>
+      <label for="">
+        Richest
+        <input  id="total" onclick="displayMap(this.value)" type="radio"  name="total" value="richest"/> 
+      </label>
+    </div>
+  </form>
+  <div id="container">
+
+  </div>
+  </div>
+</body>
+ <script src="app.js"></script>
+</html>
